--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -241,6 +241,9 @@ div.issues h3 { background: url(../images/ticket.png) no-repeat 0% 50%; padding-
 div.members h3 { background: url(../images/group.png) no-repeat 0% 50%; padding-left: 20px; }
 div.news h3 { background: url(../images/news.png) no-repeat 0% 50%; padding-left: 20px; }
 div.projects h3 { background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
+div.eventi h3  { background: url(../images/calendar.png) no-repeat 0% 50%; padding-left: 20px; }
+.convegni  { background: url(../images/calendar.png) no-repeat 0% 50%; padding-left: 20px; }
+div.quesiti h3  { background: url(../images/wiki_edit.png) no-repeat 0% 50%; padding-left: 20px; }
 .responses { background: url(../images/wiki_edit.png) no-repeat 0% 50%; padding-left: 20px; }
 .domand_wait { background: url(../images/time.png) no-repeat 0% 50%; padding-left: 20px; }
 .domand_ko { background: url(../images/task_late.png) no-repeat 0% 50%; padding-left: 20px; }
