--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -2,8 +2,8 @@
 
 <!-- ------------------------------------- REGISTRAZIONE ------------------------------- -->
 
-<div class="fs-layout-cell fs-content clearfix">
-  <article class="fs-post fs-article" style="width: 100%; position:relative;">
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+  <article class="fs-post fs-article" style="width: 100%;">
     <div class="fs-postcontent clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row" style=" position:relative; border: solid 1px #e3f8ff;">
