--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -1,5 +1,8 @@
 /* personalizzazioni */
-
+.htmloverflow{
+    display: block;
+    overflow: auto;
+}
 .fs-art-attachments{
 text-align: center;
     padding: 10px 10%;
