--- a/app/views/editorial/profilo_edit.html.erb
+++ b/app/views/editorial/profilo_edit.html.erb
@@ -92,7 +92,7 @@
       </div>
   <% end %>
 </div>
-<% content_for :header_yui do %>
+<%# content_for :header_yui do %>
     <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
     <%= javascript_include_tag "yui/yahoo-dom-event.js" %>
     <%= javascript_include_tag "yui/element-min.js" %>
@@ -101,7 +101,7 @@
     <%= javascript_include_tag "yui/button-min.js" %>
     <%= javascript_include_tag "yui/editor-min.js" %>
     <%= javascript_include_tag "yui/yui_fs.js" %>
-<% end %>
+<%# end %>
 <script type="text/javascript" charset="utf-8">
     (function () {
         var myConfig1 = {
