--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -1,4 +1,12 @@
 <%# form_tag({:action => :update}, {:method => :put})form_tag({:action => controller.action_name, :id => @project, :path => to_path_param(@path), :rev => ''}, {:method => :get, :id => 'revision_selector'}) do -%>
+<%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
+<%= javascript_include_tag "yui/yahoo-dom-event.js" %>
+<%= javascript_include_tag "yui/element-min.js" %>
+<%= javascript_include_tag "yui/container_core-min.js" %>
+<%= javascript_include_tag "yui/menu-min.js" %>
+<%= javascript_include_tag "yui/button-min.js" %>
+<%= javascript_include_tag "yui/editor-min.js" %>
+<%= javascript_include_tag "yui/yui_fs.js" %>
 <style>
     .thumb {
         height: 120px;
@@ -87,16 +95,9 @@
 <% end %>
 </div>
 
-<% content_for :header_yui do %>
-    <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
-    <%= javascript_include_tag "yui/yahoo-dom-event.js" %>
-    <%= javascript_include_tag "yui/element-min.js" %>
-    <%= javascript_include_tag "yui/container_core-min.js" %>
-    <%= javascript_include_tag "yui/menu-min.js" %>
-    <%= javascript_include_tag "yui/button-min.js" %>
-    <%= javascript_include_tag "yui/editor-min.js" %>
-    <%= javascript_include_tag "yui/yui_fs.js" %>
-<% end %>
+<%# content_for :header_yui do %>
+
+<%# end %>
 <script type="text/javascript" charset="utf-8">
     (function () {
         var myConfig1 = {
