--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -762,6 +762,11 @@ margin-left:-1px;*/
 }
 .fs-postmetadatafooter-author-qualifica{
   font-size: 0.8em;
+    font-style: italic;
+    text-align: left;
+    font-variant: small-caps;
+    padding-left: 3px  ;
+    color: #2e2e2e;
 }
 
 .fs-postmetadatafooter-ok {
