--- a/app/views/assos/_form.html.erb
+++ b/app/views/assos/_form.html.erb
@@ -1,8 +1,6 @@
 <%= f.error_messages %>
 
 <div class="box tabular">
-<p style="display:none2;">  NON USARE f.codice sostiuito da id ==> 
-  <%=h (f.object.id) %></p>
   <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
   <p><%= f.text_field :indirizzo, :label => :field_indirizzo, :size => 50 %></p>
   <p><%= f.text_field :email, :label => :field_email, :required => true, :size => 20 %></p>
@@ -15,20 +13,38 @@
   <p><%= f.text_area :comunicazioni, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
   <p><%= f.text_field :email_alt, :label => :field_email_alt, :size => 20 %></p>
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
-   <p id="prev" style="max-height: 300px;"> <%= image_tag @cross_organization.image.url(:m) %>   </p>
-   <p>
-   <ul style="font-size: 0.8em; color: #aeaeae; margin: 0 0 5px  11%;">
-     <li>
-       il rapporto tra larghezza e altezza dell'immagine sarà 1/1 (quadrato)
-     </li>
-     <li>
-       l'immagine verrà non deve superare i 200kb e di formato jpg/png
-     </li>
-   </ul>
+  <p id="prev" style="max-height: 300px;"> <%= image_tag @asso.image.url(:m) %>   </p>
+  <p>
+    <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
+      <li>
+        Immagini stili e misure:
+
+      </li>
+      <li>
+        blocco grande a sinistra: :block_l => "256x216#"
+      </li>
+      <li>
+        blocco piccolo come dentro un articolo: :block_s => "194x154#"
+      </li>
+      <li>
+        blocco tra i menu a destra :tramenu => "290x94#"
+      </li>
+      <li>
+        l'immagine verrà non deve superare i 200kb e di formato jpg/png/gif/bmp
+      </li>
+    </ul>
+  </p>
  </div>
  <script type="text/javascript">
-     document.getElementById('asso_image').addEventListener('change', handleFileSelect, false);
+    (function () {
+
+      //funct_avatar('i');
+      document.getElementById('asso_image').addEventListener('change', function(event) {
+              if (!event) // i.e. the argument is undefined or null
+                event = window.event;
+                handleFileSelect(event, 'prev', '')
+      }, false);
+
+    })
+            ();
  </script>
-
-
-
