--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -36,28 +36,39 @@
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
   <p id="prev" style="max-height: 300px;"> <%= image_tag @group_banner.image.url(:original) %>   </p>
   <p>
-  <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
-    <li>
-      Immagini stili e misure:
+    <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
+      <li>
+        Immagini stili e misure:
 
-    </li>
-    <li>
-      blocco grande a sinistra: :block_l => "256x216#"
-    </li>
-    <li>
-      blocco piccolo come dentro un articolo: :block_s => "194x154#"
-    </li>
-    <li>
-      blocco tra i menu a destra :tramenu => "290x94#"
-    </li>
-    <li>
-      l'immagine verrà non deve superare i 200kb e di formato jpg/png/gif/bmp
-    </li>
-  </ul>
-
+      </li>
+      <li>
+        blocco grande a sinistra: :block_l => "256x216#"
+      </li>
+      <li>
+        blocco piccolo come dentro un articolo: :block_s => "194x154#"
+      </li>
+      <li>
+        blocco tra i menu a destra :tramenu => "290x94#"
+      </li>
+      <li>
+        l'immagine verrà non deve superare i 200kb e di formato jpg/png/gif/bmp
+      </li>
+    </ul>
+  </p>
 </div>
 <script type="text/javascript">
-    document.getElementById('group_banner_image').addEventListener('change', handleFileSelect, false);
+    (function () {
+
+      //funct_avatar('i');
+      document.getElementById('group_banner_image').addEventListener('change', function(event) {
+              if (!event) // i.e. the argument is undefined or null
+                event = window.event;
+                handleFileSelect(event, 'prev', '')
+      }, false);
+
+    })
+            ();
+
 </script>
 
 
