--- a/app/views/editorial/profilo_edit.html.erb
+++ b/app/views/editorial/profilo_edit.html.erb
@@ -21,7 +21,7 @@
         <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
           <label><%= radio_button_tag :use_gravatar, true, @user_profile.use_gravatar?, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
           <label><%= radio_button_tag :use_gravatar, false, !@user_profile.use_gravatar?, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
-          <%= file_field_tag :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+          <%= file_field_tag :photo %>
         </div>
       </div>
       <div class="fs-profiles-ecx">
