--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -99,9 +99,9 @@
 
           //Focus
           //< %= javascript_tag "$('#username').focus();" %>
-          if ($("#username").length > 0) {
-            $('#username').focus();
-          }
+         // if ($("#username").length > 0) {
+         //   $('#username').focus();
+         // }
           //Scroll to top
           $(window).scroll(function() {
               if(jQuery(this).scrollTop() != 0) {
