--- a/app/views/editorial/profilo_edit.html.erb
+++ b/app/views/editorial/profilo_edit.html.erb
@@ -81,14 +81,14 @@
         <%= label_tag l(:label_titoli) %>
         <br/>
 
-        <p><%= text_area_tag :titoli, @user_profile.titoli , :name => 'titoli', :required => false, :cols => 120, :rows => 15 %>  </p>
+        <p><%= text_area_tag :titoli, @user_profile.titoli , :name => 'titoli',  :cols => 120, :rows => 15 %>  </p>
       </div>
       <br/>&nbsp; <br/>
       <div class="yui-skin-sam">
         <%= label_tag l(:label_curriculum) %>
         <br/>
 
-        <p><%= text_area_tag :curriculum, @user_profile.curriculum, :name => 'curriculum', :required => false, :cols => 120, :rows => 15 %>  </p>
+        <p><%= text_area_tag :curriculum, @user_profile.curriculum, :name => 'curriculum', :cols => 120, :rows => 15 %>  </p>
       </div>
   <% end %>
 </div>
@@ -111,7 +111,7 @@
           resize:true,
           animate:true,
           dompath:true,
-          focusAtStart:true,
+          focusAtStart:false,
           nodeChangeDelay:false,
           removeLineBreaks:true,
           drag:true
