--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -84,13 +84,13 @@
       <%= label_tag l(:label_titoli) %>
       <br/>
 
-      <p><%= text_area_tag :titoli, :name => 'titoli', :required => false, :cols => 120, :rows => 15 %>  </p>
+      <p><%= text_area_tag :titoli, :name => 'titoli', :cols => 120, :rows => 15 %>  </p>
     </div>
     <div class="yui-skin-sam">
       <%= label_tag l(:label_curriculum) %>
       <br/>
 
-      <p><%= text_area_tag :curriculum, :name => 'curriculum', :required => false, :cols => 120, :rows => 15 %>  </p>
+      <p><%= text_area_tag :curriculum, :name => 'curriculum', :cols => 120, :rows => 15 %>  </p>
     </div>
 <% end %>
 </div>
@@ -107,7 +107,7 @@
           resize:true,
           animate:true,
           dompath:true,
-          focusAtStart:true,
+          focusAtStart:false,
           nodeChangeDelay:false,
           removeLineBreaks:true,
           drag:true
@@ -119,7 +119,8 @@
           width:'95%',
           animate:true,
           dompath:true,
-          focusAtStart:true
+          focusAtStart:false,
+          drag:true
       };
       init_yui_editor_fs('curriculum', myConfig2);
 
