--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -767,6 +767,7 @@ margin-left:-1px;*/
     font-variant: small-caps;
     padding-left: 3px  ;
     color: #2e2e2e;
+    line-height: 1.2em;
 }
 
 .fs-postmetadatafooter-ok {
