--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -24,7 +24,7 @@
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
-                              <span style="padding: 0 3px 0 6px;"> <%= h articolo.author %></span>
+                              <span class="fs-postmetadatafooter-author-txt"> <%= h articolo.author %></span>
                             </div>
                             <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                 <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
@@ -39,7 +39,7 @@
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
-                              <span style="padding: 0 3px 0 6px;"> <%= h articolo.author %></span>
+                              <span class="fs-postmetadatafooter-author-txt"> <%= h articolo.author %></span>
                             </div>
                             <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                 <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
