--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -772,6 +772,7 @@ margin-left:-1px;*/
 .fs-postmetadatafooter-author-txt{
     padding: 0 2px 0 6px;
     line-height: 1em;
+    text-align: left;
 }
 
 .fs-postmetadatafooter-ok {
