--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,12 @@
 <%= error_messages_for 'project' %>
 
+<div class="splitcontentleft">
+
 <div class="box">
   <!--[form:project]-->
-  <p><%= f.text_field :name, :required => true, :size => 60 %></p>
+  <p><%= f.text_field :name, :required => true, :size => '50%' %></p>
 
-  <p><%= f.text_field :identifier, :required => true, :size => 60, :disabled => @project.identifier_frozen? %>
+  <p><%= f.text_field :identifier, :required => true, :size => '10%', :disabled => @project.identifier_frozen? %>
   <% unless @project.identifier_frozen? %>
   <br /><em><%= l(:text_length_between, :min => 1, :max => Project::IDENTIFIER_MAX_LENGTH) %> <%= l(:text_project_identifier_info).html_safe %></em>
   <% end %></p>
@@ -72,4 +74,36 @@
 </fieldset>
 <% end %>
 <% end %>
+
+</div>
+
+<div class="splitcontentright">
+
+<%= render :partial => 'lastprojects_box' %>
+
+<% if @project.new_record? && !@authors.nil? && @authors.any? %>
+  <div class="box">
+    <h3 class="redattore">Lista redattori che possono partecipare alla realizzazione degli articoli: <b><%= @authors.count() %></b>
+    </h3>
+    <p>
+    <% @authors.each do |usr| %>
+      <div class="icon icon-auth"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+    </p>
+  </div>
+<% end %>
+
+<% if @project.new_record? && !@managers.nil? && @managers.any? %>
+  <div class="box ">
+    <h3 class="power_user">Lista Manager che accedono all'edizione: <b><%= @managers.count() %></b></h3>
+    <p>
+    <% @managers.each do |usr| %>
+      <div class="icon icon-man"><%= link_to usr, user_path(usr) %></div>
+    <% end %>
+    </p>
+  </div>
+<% end %>
+
+</div>
+
 <!--[eoform:project]-->
