--- a/app/views/fees/registrati.html.erb
+++ b/app/views/fees/registrati.html.erb
@@ -44,7 +44,7 @@ params[:role_id].to_i:  <%= params[:role_id].to_i %>
   <tbody>
 <% for user in @users -%>
   <tr class="user <%= cycle("odd", "even") %> <%= %w(anon active registered locked)[user.status] %>">
-  <td class="firstname"><%= avatar(user, :size => "14") %><%= link_to h(user.name), edit_user_path(user) %></td>
+  <td class="firstname"><%= avatar(user, { :size => "14", :class => "no-div" }) %><%= link_to h(user.name), edit_user_path(user) %></td>
   <td class="<%= user.role %>"><%= get_status_role(user) %></td>
   <td class="created_on" align="center"><%= format_time(user.created_on) %></td>
   <td align="center"><%= checked_image user.privato? %></td>
