--- a/app/views/issues/_history.html.erb
+++ b/app/views/issues/_history.html.erb
@@ -2,7 +2,7 @@
 <% for journal in journals %>
   <div id="change-<%= journal.id %>" class="<%= journal.css_classes %>">
     <h4><div class="journal-link"><%= link_to "##{journal.indice}", :anchor => "note-#{journal.indice}" %></div>
-    <%= avatar(journal.user, :size => "24") %>
+    <%= avatar(journal.user, { :size => "24", :class => "no-div" } ) %>
     <%= content_tag('a', '', :name => "note-#{journal.indice}")%>
     <%= authoring journal.created_on, journal.user, :label => :label_updated_time_by %></h4>
 
