--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -14,7 +14,7 @@
       :class => 'icon icon-del') if User.current.allowed_to?(:manage_news, @project) %>
 </div>
 
-<h2><%= avatar(@news.author, :size => "24") %><%=h @news.title %></h2>
+<h2><%= avatar(@news.author, { :size => "24", :class => "no-div" }) %><%=h @news.title %></h2>
 
 <% if authorize_for('news', 'edit') %>
 <div id="edit-news" style="display:none;">
@@ -52,7 +52,7 @@
       <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
                                                          :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
       </div>
-      <h4><%= avatar(comment.author, :size => "24") %><%= authoring comment.created_on, comment.author %></h4>
+      <h4><%= avatar(comment.author, { :size => "24", :class => "no-div" }) %><%= authoring comment.created_on, comment.author %></h4>
       <%= textilizable(comment.comments) %>
   <% end if @comments.any? %>
   </div>
