--- a/app/views/news/showabstract.html.erb
+++ b/app/views/news/showabstract.html.erb
@@ -6,7 +6,7 @@
       :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
 </div>
 
-<h2><%= avatar(@news.author, :size => "24") %><%=h @news.title %></h2>
+<h2><%= avatar(@news.author, { :size => "24", :class => "no-div" }) %><%=h @news.title %></h2>
 
 <p><% unless @news.summary.blank? %><em><%=h @news.summary %></em><br /><% end %>
 <span class="author"><%= authoring @news.created_on, @news.author %></span></p>
